feat: setup localization

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
-  <string name="app_name">Dicoding Story</string>
+  <string name="app_name" translatable="false">Dicoding Story</string>
+  <string-array name="languages" translatable="false">
+    <item>en</item>
+    <item>in</item>
+  </string-array>
+  <string name="err_unauthorized">Uh oh! Seems like you\'re not logged in.</string>
+  <string name="err_bad_req_signin">An error occurred while logging in.</string>
+  <string name="err_bad_req_signup">An error occurred while creating account.</string>
+  <string name="err_invalid_creds">Invalid email or password.</string>
+  <string name="err_duplicated_creds">Email is already in use.</string>
+  <string name="err_form_email_empty">Email must not be empty.</string>
+  <string name="err_form_email_invalid">Invalid email address.</string>
+  <string name="err_form_pass_empty">Password must not be empty.</string>
+  <string name="err_form_pass_invalid">Password must be at least 8 characters.</string>
+  <string name="err_form_name_empty">Name must not be empty.</string>
+  <string name="err_form_name_invalid">Name must be at least 2 characters.</string>
+  <string name="err_general_trouble">Uh oh! Something went wrong...</string>
+  <string name="err_signup_trouble">Failed to create account. Something went wrong.</string>
+  <string name="signup_success">Your account successfully created. Please sign in to continue.</string>
 </resources>
